feat(autocomplete): switch to ValueSet format
